--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-pagination",
+  "name": "@lalitshahi/react-pagination",
   "description": "a react-pagination component",
   "license": "MIT",
+  "author": "Lalit Shahi",
   "version": "0.0.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -10,6 +11,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/lalitshahi"
+  },
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
     "lint": "tsc",
