--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,5 @@ jobs:
           node-version: 16.x
           cache: "pnpm"
       - run: pnpm install --no-frozen-lockfile
+      - run: pnpm test
       - run: pnpm run lint && pnpm run build
