--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
     "lint": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "ci": "pnpm run lint && pnpm run test && pnpm run build",
+    "release": "pnpm run lint && pnpm run test && pnpm run build && changeset publish"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
