--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
 auto-install-peers=false
+init-author-name=Lalit Shahi
+registry=https://registry.npmjs.org/
+@lalitshahi:registry=https://npm.pkg.github.com/
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
